# OpenBrain

./: .antigravityrules  .gitignore  BENCHMARKS.md  CLAUDE.md  NOTICE  README.md  config.toml  install.sh  pyproject.toml  requirements.txt
.claude-plugin/: marketplace.json  plugin.json
evals/: README.md  golden.jsonl  holdout.py  run.py
guardrails/: README.md  __init__.py  __main__.py  auth.py  config.py  db.py  mcp.py  models.py  server.py
guardrails/hooks/: __init__.py  claude_code_capture.py
guardrails/ui/: index.html
integrations/: README.md
integrations/antigravity/: mcp_config.json  openbrain.md
integrations/cursor/: mcp.json  openbrain.mdc
integrations/jetbrains/: guidelines.md  mcp.json
integrations/vscode/: copilot-instructions.md  mcp.json  openbrain-hooks.json
myagent/: __init__.py  __main__.py  auth.py  config.py  connect.py  connectors.py  db.py  mcp.py  memory_service.py  ocr.py  ollama.py  proxy.py  redact.py  search.py  seed.py  server.py  tokens.py  vault.py  vault_sync.py
myagent/ui/: index.html
scripts/: install-integrations.sh  install-launchd.sh  recall-hook.sh  session-recall-hook.sh  uninstall-launchd.sh
tests/: helpers.py  test_auth.py  test_connect.py  test_connectors.py  test_db.py  test_holdout.py  test_layered_recall.py  test_mcp.py  test_memory_service.py  test_ocr.py  test_proxy.py  test_redact.py  test_search.py  test_server.py  test_tokens.py  test_vault_sync.py
tests/guardrails/: test_capture.py  test_db.py  test_mcp.py  test_server.py
